--- a/src/components/body/body.module.scss
+++ b/src/components/body/body.module.scss
@@ -22,7 +22,7 @@
   justify-items: start;
   justify-content: center;
   align-items: start;
-  background-color: rgba(217, 217, 217, 0.08);
+  background-color: rgba(217, 217, 217, 0);
 }
 .sidebar {
   display: flex;
@@ -30,5 +30,5 @@
   justify-items: start;
   justify-content: start;
   width: 248px;
-  background-color: rgba(231, 231, 231, 0.08);
+  background-color: rgba(0, 0, 0, 0);
 }
